# barrekeep

./: .gitignore  CLAUDE.md  README.md  SETUP.md  index.html  mise.toml  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.claude/agents/: schedule-reviewer.md  sling-extractor.md
.claude/skills/schedule-algorithm/: SKILL.md
.claude/skills/schema-change/: SKILL.md
.claude/skills/sling-integration/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  data-model.md  sling-api.md
docs/decisions/: 2026-06-07-inactive-teachers-excluded-from-proposer.md
docs/superpowers/plans/: 2026-06-06-push-to-sling.md  2026-06-06-roster-from-sling.md  2026-06-06-studio-autodiscover.md  2026-07-06-claude-proposal-editor.md
docs/superpowers/specs/: 2026-06-06-push-to-sling-design.md  2026-06-06-roster-from-sling-design.md  2026-06-06-studio-autodiscover-design.md  2026-07-06-claude-proposal-editor-design.md
prompts/: proposal-editor.md  proposer-reviewer.md
scripts/: propose.py  push_to_sling.py  rollback_push.py  sling_extract.py
scripts/tests/: fixture_payload.json  test_propose_rules.py
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_core_schema.sql  0002_coteach_label.sql  0003_drop_proposal_shift_fks.sql  0004_claude_runs_drop_fks.sql  0005_sling_pull.sql  0006_teacher_location.sql  0007_studio_config.sql  0008_drop_demo_roster.sql  0009_positions_updatable.sql  0010_algorithm_versions.sql
src-tauri/src/: algorithm.rs  commands.rs  db.rs  editor.rs  lib.rs  logging.rs  main.rs  migrations.rs  review.rs  secrets.rs  seed.rs  sling.rs  sling_login.rs  sling_login_capture.js
src-tauri/test_fixtures/: sling_discovery_sample.json
src/components/: ErrorBoundary.tsx  MonthSelector.tsx  PushModal.tsx  SlingTokenModal.tsx  UpdateBanner.tsx
src/components/calendar/: CalendarHeader.tsx  CalendarView.tsx  DayCell.tsx  DayEditorPanel.tsx  DayPanel.tsx  IssueCard.tsx  IssueQueue.tsx  MonthGrid.tsx  SlotEditor.tsx  SlotRow.tsx  StaleBanner.tsx  calendar.css
src/components/claude/: AlgorithmCard.tsx  ClaudeEditorPanel.tsx  EditChecklist.tsx  VersionProposalCard.tsx
src/components/ui/: Avatar.tsx  ClassChip.tsx  EmptyState.tsx  Field.tsx  Kpi.tsx  LoadingBlock.tsx  PageHead.tsx  ProgressBar.tsx  ProposalSwitcher.tsx  StatusMessage.tsx  Tabs.tsx  VersionSwitcher.tsx
src/lib/: api.ts  avatar.test.ts  avatar.ts  candidates.test.ts  candidates.ts  dates.test.ts  dates.ts  devMock.ts  formatChips.test.ts  formatChips.ts  issues.test.ts  issues.ts  kpis.test.ts  kpis.ts  slingCapture.test.ts  suggestFix.test.ts  suggestFix.ts  updater.ts
src/screens/: PositionsScreen.tsx  ProposalsScreen.tsx  SettingsScreen.tsx  TeachersScreen.tsx
src/styles/tokens/: chips.css  colors.css  spacing.css  typography.css
